--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.5.1"
   }
 }
