--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "next": "13.4.1",
     "nookies": "^2.5.2",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-query": "^3.39.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
